# TrustLayer

./: .gitignore  README.md  docker-compose.postgres.yml  pyproject.toml
config/: eval_samples.json  eval_samples_adversarial.json  eval_samples_benign_extended.json  eval_samples_hard_risky.json  policy.example.json
docs/: 00-doc-index.md  01-overview.md  02-ingress-gateway.md  03-egress-gateway.md  04-audit-infrastructure.md  05-http-api.md  06-policy-config.md  07-replay-cli.md  08-realistic-scenario-comparisons.md  09-approval-assistant.md  10-approval-queue.md  11-evaluation-framework.md  12-trustlayer-boundaries.md  13-mcp-gateway.md  14-unified-mcp-gateway.md  15-operations-sop.md  16-production-control-plane-architecture.md  17-control-console.md
fixtures/: demo_supplier_research.html  demo_support_brief.txt  remote_hidden_supplier.html  remote_rag_chunk.json
scripts/: deploy-local.sh  test-control-plane-postgres.sh
src/trustlayer/: __init__.py  app.py  audit.py  audit_bus.py  audit_pipeline.py  control_plane.py  demo_services.py  evaluation.py  main.py  mcp_gateway.py  openai_agent_demo.py  ops_report.py  policy.py  replay.py  sanitizer.py  scenarios.py  service.py
tests/: test_control_plane.py  test_evaluation.py  test_evaluation_adversarial_pack.py  test_evaluation_benign_pack.py  test_evaluation_hard_risky_pack.py  test_gateway.py  test_openai_agent_demo.py  test_ops_report.py  test_realistic_scenarios.py
