[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "trustlayer"
version = "0.1.0"
description = "TrustLayer gateway and audit infrastructure for agent defense."
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2"]

[tool.setuptools.packages.find]
where = ["src"]
